fix word wrap in description

--- a/web/assets/css/custom.css
+++ b/web/assets/css/custom.css
@@ -201,3 +201,8 @@ form {
 .validation-info {
     font-size: 0.8rem;
 }
+
+.profile-table td {
+    word-wrap: break-word;
+    word-break: break-word;
+}
